@@ -281,12 +281,12 @@ IF(OpenZWave)
     find_library(UDEV NAMES libudev.a)
     IF(UDEV)
       message(STATUS ${UDEV})
-      target_link_libraries(domoticz ${UDEV})
+      target_link_libraries(domoticz ${UDEV} -lrt)
     else()
       find_library(UDEV NAMES libudev.so)
       IF(UDEV)
          message(STATUS ${UDEV})
-         target_link_libraries(domoticz ${UDEV})
+         target_link_libraries(domoticz ${UDEV} -lrt)
       else()
          MESSAGE(FATAL_ERROR "LIB UDEV not found on your system, see install.txt how to get them installed.\nsudo apt-get install libudev-dev")
       ENDIF(UDEV)
